--- a/javascript/package.json
+++ b/javascript/package.json
@@ -10,7 +10,9 @@
     "url": "git+https://github.com/rhie-coder/builder"
   },
   "keywords": [
-    "flagtail"
+    "builder",
+    "javascript",
+    "typescript"
   ],
   "author": {
     "name": "RHIE MINHYUNG",
